--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
             <a class="navbar-brand mr-auto mr-lg-0" href="#"> <!-- add caminho -->
                 <img class="logo" src="assets/csl.svg" alt="logo csl">
             </a>
-            <button class="navbar-toggler p-0 border-0 mr-4" type="button" data-toggle="offcanvas">
+            <button class="navbar-toggler p-0  mr-4" type="button" data-toggle="offcanvas">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
@@ -59,7 +59,7 @@
 
     <!--cta-->
     <div class="cta">
-        <h1>Conheço<br>nossa história</h1>
+        <h1>Conheçe<br>nossa história</h1>
         <h2>O Colégio São Lucas nasceu em 15 de<br>fevereiro de 1999 como realização<br>de um sonho da Professora<br>Eliete Lopes Pereira.</h2>
         <br>
         <a href="#" class="btn-cta">LER MAIS</a>
