--- a/index.htm
+++ b/index.htm
@@ -59,7 +59,7 @@
 
     <!--cta-->
     <div class="cta">
-        <h1>Conheçe<br>nossa história</h1>
+        <h1>Conheça<br>nossa história</h1>
         <h2>O Colégio São Lucas nasceu em 15 de<br>fevereiro de 1999 como realização<br>de um sonho da Professora<br>Eliete Lopes Pereira.</h2>
         <a href="#" class="btn-cta">LER MAIS</a>
     </div>
