--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,9 @@
                         <a class="nav-link" href="#">Sobre</a> <!-- add caminho -->
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Calendário</a> <!-- add caminho -->
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Depoimentos</a> <!-- add caminho -->
                     </li>
                     <li class="nav-item">
@@ -60,6 +63,7 @@
     <!--cta-->
     <div class="cta">
         <h1>Conheça<br>nossa história</h1>
+        <br>
         <h2>O Colégio São Lucas nasceu em 15 de<br>fevereiro de 1999 como realização<br>de um sonho da Professora<br>Eliete Lopes Pereira.</h2>
         <a href="#" class="btn-cta">LER MAIS</a>
     </div>
