--- a/index.htm
+++ b/index.htm
@@ -22,51 +22,67 @@
 </head>
 
 <body>
-    <!-- inicio navbar -->
-    <div class="navbar-csl">
-        <nav class="navbar navbar-expand-lg navbar-dark mt-5">
-            <a class="navbar-brand mr-auto mr-lg-0" href="#"> <!-- add caminho -->
-                <img class="logo" src="assets/csl.svg" alt="logo csl">
-            </a>
-            <button class="navbar-toggler p-0  mr-4" type="button" data-toggle="offcanvas">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-                <a data-toggle="closecanvas">
-                    <img class="exit-canva" src="assets/back.svg" alt="voltar">
+    <div class="hero">
+        <!-- inicio navbar -->
+        <div class="navbar-csl">
+            <nav class="navbar navbar-expand-lg navbar-dark mt-5">
+                <a class="navbar-brand mr-auto mr-lg-0" href="#"> <!-- add caminho -->
+                    <img class="logo" src="assets/csl.svg" alt="logo csl">
                 </a>
-                <ul class="navbar-nav ml-lg-auto mr-4 ml-2">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre</a> <!-- add caminho -->
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Calendário</a> <!-- add caminho -->
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Depoimentos</a> <!-- add caminho -->
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Galeria</a> <!-- add caminho -->
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Fale Conosco</a> <!-- add caminho -->
-                    </li>
-                </ul>
-           </div>
-        </nav>
-    </div>
-    <!-- fim navbar -->
-    <img class="img-header1 img-fluid" src="assets/blue-header-g.svg" alt="bg">
-    <img class="img-header2 img-fluid" src="assets/blue-header-p.svg" alt="bg">
-    <img class="img-student img-fluid" src="assets/students.svg" alt="Estudantes">
+                <button class="navbar-toggler p-0  mr-4" type="button" data-toggle="offcanvas">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+                    <a data-toggle="closecanvas">
+                        <img class="exit-canva" src="assets/back.svg" alt="voltar">
+                    </a>
+                    <ul class="navbar-nav ml-lg-auto mr-4 ml-2">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#historia">Sobre</a> <!-- add caminho -->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Calendário</a> <!-- add caminho -->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Depoimentos</a> <!-- add caminho -->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Galeria</a> <!-- add caminho -->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Fale Conosco</a> <!-- add caminho -->
+                        </li>
+                    </ul>
+            </div>
+            </nav>
+        </div>
+        <!-- fim navbar -->
+        <img class="img-header1 img-fluid" src="assets/blue-header-g.svg" alt="bg">
+        <img class="img-header2 img-fluid" src="assets/blue-header-p.svg" alt="bg">
+        <img class="img-student img-fluid" src="assets/students.svg" alt="Estudantes">
 
-    <!--cta-->
-    <div class="cta">
-        <h1>Conheça<br>nossa história</h1>
-        <br>
-        <h2>O Colégio São Lucas nasceu em 15 de<br>fevereiro de 1999 como realização<br>de um sonho da Professora<br>Eliete Lopes Pereira.</h2>
-        <a href="#" class="btn-cta">LER MAIS</a>
+        <!--cta-->
+        <div class="cta">
+            <h1>Conheça<br>nossa história</h1>
+            <h2>O Colégio São Lucas nasceu em 15 de<br>fevereiro de 1999 como realização<br>de um sonho da Professora<br>Eliete Lopes Pereira.</h2>
+            <a href="#historia" class="btn-cta">LER MAIS</a>
+        </div>
+        <!--fim da cta-->
     </div>
-    <!--fim da cta-->
+
+    <!--tabela "sobre"-->
+    <div class="sobre row">
+        <div class="historia col-md-6" id="historia">
+            <div class="title-hist">
+                <h3>CONHEÇA NOSSA HISTÓRIA</h3>
+            </div>
+            <h4> O Colégio São Lucas nasceu em 15 de fevereiro de 1999 como realização de um sonho da Professora Eliete Lopes Pereira. Familiarizada e apaixonada por educação desde os 16 anos de idade, a Professora Eliete sempre trabalhou em ambiente escolar em Fortaleza, desde professora até o cargo de Coordenadora. Por 10 anos, enquanto acompanhava o seu esposo, o Professor Clementino Júnior, em viagens à trabalho deste, a Professora Eliete passou a dedicar seu tempo em pesquisar as diversas nuances que a educação formal tinha em vários estados, tais como Salvador, São Paulo e Santa Catarina, e até em outros países, como a Alemanha. Retornando em 1998 ao nosso Estado do Ceará, passou a focar todo seu esforço na construção do Colégio São Lucas, inclusive com a ajuda do seu pai, o Sr. Antônio Xavier, Mestre de Obras. O bairro escolhido, antes conhecido por Conjunto Esplanada do Castelão e hoje denominado Boa Vista, foi definido após uma Análise de Mercado orientada pelo SEBRAE, momento no qual foi percebido uma demanda para escolas na região próxima ao Estádio Castelão. O nome, Colégio São Lucas, veio do carinho que a família tem pelo discípulo dos apóstolos de Jesus, Lucas, que foi grande médico e estudioso grego e amigo próximo dos apóstolos Pedro e Paulo, mesmo a Escola sendo ecumênica e respeitando todo tipo de crença. Com simplicidade e humildade, o Colégio São Lucas sempre focou em um futuro de qualidade. </h4>
+            <br><br>
+        </div>
+        <div class="img-hist col-md-4">
+            <img src="assets/childrens.jpg">
+        </div>
+    <!--fim da tabela "sobre"-->
+    </div>
 </body>
 </html>
